# local-id-agent

./: .dockerignore  .gitignore  README.md  buf.gen.yaml  config.example.json  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: .taurignore  Cargo.toml  config.desktop.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: admin_lock.rs  lib.rs  main.rs
cmd/localid-agent/: main.go
docker/: README.md  agent.Dockerfile  agent.config.eid.json  agent.config.mock.json  agent.config.pkcs11.json  backend.Dockerfile  frontend-config.template.js  frontend-entrypoint.sh  frontend.Dockerfile
docs/: agent-config.md  architecture.md  desktop.md  react-example.md
examples/: README.md
examples/fastapi/: README.md  requirements.txt
examples/laravel/: .env.example  .gitignore  README.md  composer.json
examples/mock-backend/: main.go
examples/react/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
examples/vue/: README.md  index.html  package.json  tsconfig.app.json
internal/api/: handlers.go  handlers_test.go  middleware.go  routes.go  server.go
internal/config/: config.go
internal/logging/: logging.go
internal/protocol/: errors.go  (+1 more)
openapi/: agent.openapi.yaml  backend.openapi.yaml
scripts/: build-agent-sidecar.sh  check-go-coverage.sh  demo-docker-eid.sh  demo-native-eid.sh  sync-openapi.sh
(+121 files in other folders)
